Fixup for debian packages

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -27,3 +27,16 @@ packages:
       - 'ripgrep'
       - 'git'
       - 'fastfetch'
+  debian:
+    brews:
+      - 'dashlane/tap/dashlane-cli'
+    apts:
+      - 'zoxide'
+      - 'neovim'
+      - 'starship'
+      - 'exa'
+      - 'bat'
+      - 'zsh'
+      - 'ripgrep'
+      - 'git'
+      - 'fastfetch'
