Add a bunch of packages!

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -6,10 +6,19 @@ packages:
       - 'neovim'
       - 'starship'
       - 'bat' 
-      - 'exa'
+      - 'eza'
       - 'ripgrep'
       - 'btop'
+      - 'ffmpeg'
       - 'dashlane/tap/dashlane-cli'
+      - 'uv'
+      - 'fzf'
+      - 'gum'
+      - 'glow'
+      - 'vhs'
+      - 'ttyd' # required by vhs
+      - 'hyperfine'
+      - 'jnv'
     casks:
       - 'firefox'
       - 'iterm2'
@@ -18,28 +27,46 @@ packages:
   arch:
     brews:
       - 'dashlane/tap/dashlane-cli'
+      - 'ttyd' # required by vhs
     pacs:
       - 'zoxide'
       - 'neovim'
       - 'starship'
-      - 'exa'
+      - 'eza'
       - 'bat'
       - 'zsh'
       - 'ripgrep'
       - 'git'
       - 'fastfetch'
       - 'btop'
+      - 'ffmpeg'
+      - 'uv'
+      - 'fzf'
+      - 'gum'
+      - 'glow'
+      - 'vhs'
+      - 'hyperfine'
+      - 'jnv'
   debian:
     brews:
       - 'dashlane/tap/dashlane-cli'
+      - 'uv'
+      - 'gum'
+      - 'glow'
+      - 'vhs'
+      - 'ttyd' # required by vhs
+      - 'jnv'
     apts:
       - 'zoxide'
       - 'neovim'
       - 'starship'
-      - 'exa'
+      - 'eza'
       - 'bat'
       - 'zsh'
       - 'ripgrep'
       - 'git'
       - 'fastfetch'
       - 'btop'
+      - 'ffmpeg'
+      - 'fzf'
+      - 'hyperfine'
