Add hyprpaper utility

--- a/private_dot_config/hypr/autostart.conf
+++ b/private_dot_config/hypr/autostart.conf
@@ -8,3 +8,4 @@
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
+exec-once = systemctl --user enable --now hyprpaper.service
