feat: manage wallpapers via symlinks

--- a/private_dot_config/hypr/hyprpaper.conf
+++ b/private_dot_config/hypr/hyprpaper.conf
@@ -1,6 +1,6 @@
 ## fallback 
 wallpaper {
     monitor =
-    path = ~/Pictures/wallpapers/bw-dune-xl.jpg
+    path = ~/.config/nosaka/current/wallpaper.jpg
     fit_mode = cover
 }
