--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,14 @@
 default_install_hook_types: [pre-commit, commit-msg]
 default_stages: [pre-commit, manual]
 repos:
+  - repo: "https://github.com/commitizen-tools/commitizen"
+    rev: v4.13.8
+    hooks:
+      - id: commitizen
+      - id: commitizen-branch
+        stages:
+          - post-commit
+          - pre-push
   - repo: "https://github.com/gitleaks/gitleaks"
     rev: v8.30.0
     hooks:
