feat(arch): add docker engine

--- a/dotfiles/.chezmoidata/packages.yaml
+++ b/dotfiles/.chezmoidata/packages.yaml
@@ -64,6 +64,7 @@ packages:
       - 'poppler'
       - 'resvg'
       - 'imagemagick'
+      - 'docker'
   debian:
     brews:
       - 'dashlane/tap/dashlane-cli'
